cmake_minimum_required(VERSION 3.29)
project(lab_assignment_week9)

set(CMAKE_CXX_STANDARD 20)

add_executable(lab_assignment_week9 problem1.cpp
        problem.h)
add_executable(problem2 problem2.cpp)
add_executable(problem3 problem3.cpp)
add_executable(problem4 problem4.cpp)
add_executable(problem5 problem5.cpp)
add_executable(problem6 problem6.cpp)
