cmake_minimum_required(VERSION 3.29)
project(lab_wok10)

set(CMAKE_CXX_STANDARD 20)

add_executable(lab_wok10 problem1.cpp)
add_executable(problem2 problem2.cpp)
add_executable(problem3 problem3.cpp)
add_executable(problem4 problem4.cpp)
add_executable(problem5 problem5.cpp)
add_executable(problem6 problem6.cpp)
add_executable(problem7 problem7.cpp)
add_executable(problem8 problem8.cpp)
add_executable(problem9 problem9.cpp)
add_executable(problem10 problem10.cpp)
add_executable(problem11 problem11.cpp)
add_executable(problem01 problem01.cpp)
add_executable(problem02 problem02.cpp)
add_executable(problem03 problem03.cpp)
