cmake_minimum_required(VERSION 3.29)
project(lab_work6)

set(CMAKE_CXX_STANDARD 20)

add_executable(lab_work6 problem1.cpp)
add_executable(problem2 problem2.cpp)
add_executable(problem3 problem3.cpp)
add_executable(problem4 problem4.cpp)
add_executable(problem5 problem5.cpp)
add_executable(problem6 problem6.cpp)
add_executable(problem7 problem7.cpp)
add_executable(problem8 problem8.cpp)
add_executable(problem9 problem9.cpp)
add_executable(problem10 problem10.cpp)
add_executable(problem11 problem11.cpp)
add_executable(problem12 problem12.cpp)
add_executable(problem13 problem13.cpp)
add_executable(problem14 problem14.cpp)
add_executable(problem15 problem15.cpp)
add_executable(problem16 problem16.cpp)
add_executable(problem17 problem17.cpp)
add_executable(problem18 problem18.cpp)
add_executable(problem19 problem19.cpp)
add_executable(problem20 problem20.cpp)
add_executable(testdrive testdrive.cpp)
